2011-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmsleep01/Makefile.in: Removed.

2011-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add psxtmsleep01.
	* psxtmsleep01/.cvsignore, psxtmsleep01/Makefile.am,
	psxtmsleep01/Makefile.in, psxtmsleep01/init.c,
	psxtmsleep01/psxtmsleep01.doc: New files.

2011-06-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmtests_plan.csv: Add sleep and nanosleep cases.

2011-04-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* README, psxtmtests_plan.csv: Add more possible test cases.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_CONFIG_HEADER(config.h).

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxtmmutex02/init.c, psxtmthread01/init.c, psxtmthread03/init.c:
	Add HAVE_CONFIG_H.

2011-02-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxtmmutex02/init.c, psxtmthread03/init.c: end_time is a uint32_t.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-12-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore, ChangeLog, Makefile.am, README, configure.ac,
	psxtmtests_plan.csv, psxtmmutex02/.cvsignore,
	psxtmmutex02/Makefile.am, psxtmmutex02/init.c,
	psxtmmutex02/psxtmmutex02.doc, psxtmthread01/.cvsignore,
	psxtmthread01/Makefile.am, psxtmthread01/init.c,
	psxtmthread01/psxtmthread01.doc, psxtmthread03/.cvsignore,
	psxtmthread03/Makefile.am, psxtmthread03/init.c,
	psxtmthread03/psxtmthread03.doc: New files.
