@@ -1,3 +1,9 @@
+2011-06-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac: Add test case for sleep - blocking.
+	* psxtmsleep02/.cvsignore, psxtmsleep02/Makefile.am,
+	psxtmsleep02/init.c, psxtmsleep02/psxtmsleep02.doc: New files.
+
 2011-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* psxtmsleep01/Makefile.in: Removed.
